kubernetes/deployment-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-redis
  labels:
    app: web-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-redis
  template:
    metadata:
      labels:
        app: web-redis
    spec:
      containers:
      - name: redis
        image: "redis:alpine"
        command:
          - "redis-server"
        ports:
        - containerPort: 6379
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
