kubernetes/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: web-redis
  ports:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: 6379
